Fix body/footer overflow issue

--- a/client/css/style.less
+++ b/client/css/style.less
@@ -65,7 +65,7 @@ body>div {
 .body {
   overflow-y: auto;
   position: absolute;
-  bottom: 0;
+  bottom: 48px;
   top: 48px;
   left: 0;
   right: 0;
